# syssonic

./: .gitignore  Cargo.toml  GETTING_STARTED.md  GITHUB_SETUP.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.txt  README.md  ROADMAP.md  demo_visualization.py
src/: composer.rs  main.rs  mapper.rs  metrics.rs
src/metrics/: battery.rs  gpu_amd.rs  processes.rs  system.rs
tray/: README.md  package-lock.json  package.json
tray/src/: App.css  App.tsx
tray/src-tauri/: Cargo.toml  tauri.conf.json
tray/src-tauri/src/: audio_thread.rs  commands.rs  config.rs  lib.rs  main.rs
tray/src-tauri/src/metrics/: fans.rs  gpu_nvidia.rs  mod.rs
