[package]
name = "tray"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SysSonic dependencies - Audio & Music
tunes = "0.5.0"
anyhow = "1.0"

# System monitoring
sysinfo = "0.31"
tokio = { version = "1.35", features = ["full"] }

# GPU monitoring
nvml-wrapper = "0.10"
libamdgpu_top = "0.6"

# Battery monitoring (cross-platform)
battery = "0.10"

# Fan speed monitoring (Linux)
libmedium = "0.5"

# Threading and communication
crossbeam-channel = "0.5"

# Configuration management
config = "0.14"
directories = "5.0"
toml = "0.8"

# Single instance
single-instance = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = 'abort'

